--- a/SOF/package.json
+++ b/SOF/package.json
@@ -6,12 +6,15 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "myuid": "^1.2.2"
   }
 }
